# blueberry_irrigation_system

./: README.md
arduino_client/: changes.txt  platformio.ini
arduino_client/include/: control_flow.h  control_irrigation.h  control_irrigation_temp.h  control_safety.h  device.h  interface.h  internet.h  pins.h  sensor_flow.h  sensor_pressure.h
arduino_client/src/: control_flow.cpp  control_irrigation.cpp  control_irrigation_temp.cpp  control_safety.cpp  device.cpp  interface.cpp  interface_serial.cpp  internet.cpp  main.cpp  sensor_flow.cpp  sensor_pressure.cpp
linux_server/: CMakeLists.txt  compile_inside.sh  compile_outside.sh
linux_server/include/: irrigation_data.h  server_udp.h
linux_server/lib/straykovsky_standard_library/include/: straykovsky_standard_library.h
linux_server/src/: irrigation_data.c  main.c  server_udp.c
ltspice/: pressure_sensor_current_to_voltage_output.asc
web_client_server/: index.html  prog.php  script.js  style.css  variables.css
